fix(global): change scrollbar color

--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -5,19 +5,13 @@ $layout-header-height: 64px;
   /* 宽度 */
 }
 
-::-webkit-scrollbar-track {
-  // background-color: #f1f1f1;
-  /* 轨道背景色 */
-}
+
 
 ::-webkit-scrollbar-thumb {
-  background-color: #4096ff7c;
-  /* 滑块颜色 */
-  // border-radius: 2px;
-  /* 滑块圆角 */
+  background-color: #e3e4e67c;
+
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #4096ff;
-  /* 滑块悬停时颜色 */
+  background-color: #e3e4e6;
 }
